--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="style.css">
+    <style media="screen">
+    .flexparent{
+      display:flex;
+      flex-direction:coumn;
+      justify-content:center;
+    }
+    .child1{
+      width:30%;
+      margin:2%;
+      padding:2%;
+      border:2px solid #ddd;}
+      .child2{
+        width:70%;
+        margin:2%;
+        padding:2%;
+        border:2px solid #ddd;}
+        img{
+          width:50%;
+          height:auto;
+          display:block;
+          margin-right: auto;
+          border-radius:50%;
+        }
+    </style>
   </head>
   <body>
-    <h1>prakash</h1>
-    <h2>lokesh<h2>
+  <!--<h1>prakash</h1>
+    <h2>lokesh</h2>-->
+    <h4>welcome to sai</h4>
+    <div class="flexparent">
+      <div class="child1">
+      <img src="immages/download.png"alt="download">
+<h2>lokesh</h2>
+<h3>9257584523</h3>
+sailokesh361997@gmail.com
+    </div>
+      <div class=" child2"> </div>
+
+    </div>
+    <script type="text/javascript" src="main.js">
+    </script>
   </body>
 </html>
